--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <script>
 var map = new mapboxgl.Map({
  container: 'map',
- style: styleJSON,
+ style: mapbox://styles/mapbox/dark-v10,
  center: [-59.39030381826475,-6.983099833201998],
  zoom: 3,
  bearing: 360.0,
