--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <nav id="menu"></nav>
         </div>
         <script src="js/qgis2web_expressions.js"></script>
-        <script src="./mapbox/mapbox-gl.js"></script>
+        <script src="mapbox/mapbox-gl.js"></script>
         <script src="js/leaflet.markercluster.js"></script>
         <script src="data/Habilitados2019ITrim_1.js"></script>
 <script src="./mapbox/style.js"></script>
 <script src="./js/Autolinker.min.js"></script>
 <script>
 var map = new mapboxgl.Map({
- container: 'map',
+ container: styleJSON,
  style: mapbox://styles/mapbox/dark-v10,
  center: [-59.39030381826475,-6.983099833201998],
  zoom: 3,
@@ -41,7 +41,7 @@ var map = new mapboxgl.Map({
 });
 map.addControl(new mapboxgl.NavigationControl(), 'top-left');
 map.addControl(new mapboxgl.AttributionControl({
-    customAttribution: '<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://github.com/mapbox/mapbox-gl-js" target="_blank">Mapbox GL JS</a> &middot; <a href="https://qgis.org" target="_blank">QGIS</a>',
+    customAttribution: '<a href="https://github.com/mapbox/mapbox-gl-js" target="_blank">Mapbox GL JS</a> &middot; <a href="https://qgis.org" target="_blank">QGIS</a>',
     compact: false
 }));
 
